--- a/python-explame/Mnist 手写体识别.ipynb
+++ b/python-explame/Mnist 手写体识别.ipynb
@@ -236,21 +236,21 @@
       "Use tf.cast instead.\n",
       "Train on 60000 samples, validate on 10000 samples\n",
       "Epoch 1/5\n",
-      "60000/60000 [==============================] - 7s 123us/step - loss: 0.7430 - acc: 0.8205 - val_loss: 0.3693 - val_acc: 0.9012\n",
+      "60000/60000 [==============================] - 7s 119us/step - loss: 0.7503 - acc: 0.8244 - val_loss: 0.3645 - val_acc: 0.9015\n",
       "Epoch 2/5\n",
-      "60000/60000 [==============================] - 7s 116us/step - loss: 0.3390 - acc: 0.9057 - val_loss: 0.2925 - val_acc: 0.9168\n",
+      "60000/60000 [==============================] - 7s 110us/step - loss: 0.3358 - acc: 0.9062 - val_loss: 0.2896 - val_acc: 0.9149\n",
       "Epoch 3/5\n",
-      "60000/60000 [==============================] - 7s 124us/step - loss: 0.2835 - acc: 0.9195 - val_loss: 0.2585 - val_acc: 0.9259\n",
+      "60000/60000 [==============================] - 7s 113us/step - loss: 0.2813 - acc: 0.9199 - val_loss: 0.2537 - val_acc: 0.9263\n",
       "Epoch 4/5\n",
-      "60000/60000 [==============================] - 11s 176us/step - loss: 0.2507 - acc: 0.9293 - val_loss: 0.2294 - val_acc: 0.9348\n",
+      "60000/60000 [==============================] - 7s 119us/step - loss: 0.2487 - acc: 0.9298 - val_loss: 0.2273 - val_acc: 0.9364\n",
       "Epoch 5/5\n",
-      "60000/60000 [==============================] - 8s 142us/step - loss: 0.2259 - acc: 0.9357 - val_loss: 0.2114 - val_acc: 0.9391\n"
+      "60000/60000 [==============================] - 7s 117us/step - loss: 0.2245 - acc: 0.9363 - val_loss: 0.2113 - val_acc: 0.9374\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0xb53348668>"
+       "<keras.callbacks.History at 0xb616fb5f8>"
       ]
      },
      "execution_count": 13,
@@ -271,7 +271,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10000/10000 [==============================] - 0s 44us/step\n"
+      "10000/10000 [==============================] - 1s 66us/step\n"
      ]
     }
    ],
@@ -283,14 +283,23 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save('mnist')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "损失 0.21144692300260068\n",
-      "准确度 0.9391\n",
-      "所以 [0.21144692300260068, 0.9391]\n"
+      "损失 0.21125468695312738\n",
+      "准确度 0.9374\n",
+      "所以 [0.21125468695312738, 0.9374]\n"
      ]
     }
    ],
